// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 1 days, return items based on current rules   1`] = `
[
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 19,
    "sellIn": 9,
  },
  Item {
    "name": "Aged Brie",
    "quality": 1,
    "sellIn": 1,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 6,
    "sellIn": 4,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 21,
    "sellIn": 14,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 51,
    "sellIn": 9,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 52,
    "sellIn": 4,
  },
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 99,
    "sellIn": 19,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 98,
    "sellIn": 19,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 5 days, return items based on current rules   1`] = `
[
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 15,
    "sellIn": 5,
  },
  Item {
    "name": "Aged Brie",
    "quality": 8,
    "sellIn": -3,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 2,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 25,
    "sellIn": 10,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 51,
    "sellIn": 5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 52,
    "sellIn": 0,
  },
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 95,
    "sellIn": 15,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 90,
    "sellIn": 15,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 10 days, return items based on current rules   1`] = `
[
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 10,
    "sellIn": 0,
  },
  Item {
    "name": "Aged Brie",
    "quality": 18,
    "sellIn": -8,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -5,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 35,
    "sellIn": 5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 51,
    "sellIn": 0,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -5,
  },
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 90,
    "sellIn": 10,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 80,
    "sellIn": 10,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 20 days, return items based on current rules   1`] = `
[
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sellIn": -10,
  },
  Item {
    "name": "Aged Brie",
    "quality": 38,
    "sellIn": -18,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -15,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -5,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -10,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -15,
  },
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 60,
    "sellIn": 0,
  },
]
`;

exports[`Gilded Rose Approval (individual tests) Items when given all the known items over 30 days, return items based on current rules   1`] = `
[
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 0,
    "sellIn": -20,
  },
  Item {
    "name": "Aged Brie",
    "quality": 50,
    "sellIn": -28,
  },
  Item {
    "name": "Elixir of the Mongoose",
    "quality": 0,
    "sellIn": -25,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Item {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -15,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -20,
  },
  Item {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -25,
  },
  Item {
    "name": "+5 Dexterity Vest",
    "quality": 60,
    "sellIn": -10,
  },
  Item {
    "name": "Conjured Mana Cake",
    "quality": 20,
    "sellIn": -10,
  },
]
`;
